--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "ghpages": "git subtree push --prefix build origin gh-pages",
     "build": "gulp build --production",
-    "start": "gulp",
-    "precommit": "gulp lint"
+    "start": "gulp"
   },
   "authors": "Coderiver <html@coderiver.com.ua>",
   "devDependencies": {
